test: minor test code refactoring